# pyrocky

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  test_examples.py  versions.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml
doc/: .vale.ini  Makefile  compress_doc.py  make.bat
doc/source/: conf.py  index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
docker/: README.rst  build_image.py
docker/261/freeflow/: Dockerfile
docker/261/rocky/: Dockerfile
examples/: README.txt  minimal.py  run_examples.py  test_examples.py
examples/basic_examples/: README.txt  minimal.py  particle_wall_interaction.py  particle_wall_interaction_with_motion.py  start_simulation_async.py
src/ansys/rocky/app/: _ra_orientation_mixin.pyi  _ra_subject_with_coloring_mixin.pyi  api_element_item.pyi  ra_addin_list.pyi  ra_addin_process.pyi  ra_addins.pyi  ra_additional_features.pyi  ra_airflow.pyi  ra_api.pyi  ra_base_geometry.pyi  ra_base_subject_element.pyi  ra_base_tagging.pyi  ra_calculations.pyi  ra_cfd_coupling.pyi  ra_cfd_parameters.pyi  ra_circular_surface.pyi  ra_contact_data.pyi  ra_contact_to_particle_process.pyi  ra_contacts_data_mesh_coloring.pyi  ra_coupled_wall.pyi  ra_custom_calculators.pyi  ra_custom_input.pyi  ra_divisions_tagging.pyi  ra_domain_settings.pyi  ra_eulerian_statistics.pyi  ra_export_toolkit.pyi  ra_fluent_coupling.pyi  ra_fluid_inlet.pyi  ra_fluid_material.pyi  ra_geometry_collection.pyi  ra_grid_process_element.pyi  ra_inlet.pyi  ra_inlets_outlets_collection.pyi  ra_input_variables.pyi  ra_joints_data_mesh_coloring.pyi  ra_list.pyi  ra_macro_hooks.pyi  ra_materials_collection.pyi  ra_materials_interaction.pyi  ra_materials_interaction_collection.pyi  (+45 more)
src/ansys/rocky/core/: __init__.py  client.py  client.pyi  examples.py  exceptions.py  launcher.py  launcher.pyi  proxies.py  retry.py  rocky_api_proxies.py  serializers.py
src/ansys/rocky/prepost/: __init__.py  client.py  exceptions.py  launcher.py
tests/: conftest.py  test_container.py  test_examples.py  test_examples_download.py  test_launcher.py  test_metadata.py  test_pyrocky.py  test_pyrocky_client.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.1/_downloads/1064924801382ff810e892ed3b6b6ae3/: particle_wall_interaction_with_motion.ipynb
version/0.1/_downloads/33aee0cba7cb6830d572e18f808d8e6e/: particle_wall_interaction.py
version/0.1/_downloads/4eb78de5c40393e78c5cb0774423a687/: particle_wall_interaction_with_motion.py
version/0.1/_sources/: contributing.rst.txt  index.rst.txt  sg_execution_times.rst.txt
version/0.1/_static/: documentation_options.js
version/0.1/api/: index.html
version/0.1/examples/: index.html  sg_execution_times.html
version/0.1/getting_started/: index.html
version/0.1/user_guide/: announcement.html  index.html
version/0.2/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.2/_sources/: sg_execution_times.rst.txt
version/0.2/_static/: documentation_options.js
version/0.2/api/: index.html
version/0.2/examples/: index.html  sg_execution_times.html
version/0.2/getting_started/: announcement.html  index.html
version/0.2/user_guide/: index.html
version/0.3/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.3/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/0.3/_static/: documentation_options.js  pygments.css  search.json
version/0.3/examples/: index.html  sg_execution_times.html
version/0.3/getting_started/: index.html
version/0.3/user_guide/: index.html
version/0.4/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.4/_sources/: sg_execution_times.rst.txt
version/0.4/_static/: documentation_options.js  search.json
version/0.4/api/: index.html
version/0.4/examples/: index.html  sg_execution_times.html
version/0.4/getting_started/: index.html
version/0.4/user_guide/: index.html
version/0.5/: contributing.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.5/_sources/: sg_execution_times.rst.txt
version/0.5/_static/: documentation_options.js
version/0.5/api/: index.html
version/0.5/examples/: index.html  sg_execution_times.html
version/0.5/user_guide/: index.html
version/0.6/: index.html  objects.inv  py-modindex.html  searchindex.js  sg_execution_times.html
version/0.6/_sources/: sg_execution_times.rst.txt
version/0.6/_static/: search.json
version/0.6/api/: index.html
version/0.6/examples/: index.html
version/0.6/getting_started/: index.html
version/0.6/user_guide/: index.html
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/dev/_static/: documentation_options.js  pygments.css  search.json
version/dev/api/: index.html
version/dev/examples/: index.html  sg_execution_times.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/_sources/: contributing.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/examples/: index.html  sg_execution_times.html
version/stable/getting_started/: index.html
version/stable/user_guide/: index.html
(+3355 files in other folders)
