[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-rocky-core"
version = "0.3.dev0"
authors = [{ name="ANSYS, Inc.", email="pyansys.core@ansys.com" }]
description = "Python client library for Ansys Rocky"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "importlib-metadata>=4.0",
    "Pyro5>=5.13",
    "numpy>=1.19, <3.0",
    "ansys-tools-path",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "requests==2.32.3",
]
doc = [
    "ansys-sphinx-theme==1.2.1",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-autoapi==3.3.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.18.0",
    "sphinx-design==0.6.1",
    "matplotlib==3.9.2", # required by sphinx-gallery
]

[project.urls]
Source = "https://github.com/ansys/pyrocky"
Issues = "https://github.com/ansys/pyrocky/"
Discussions = "https://github.com/ansys/pyrocky/discussions"
Documentation = "https://rocky.docs.pyansys.com"
Releases = "https://github.com/ansys/pyrocky/releases"

[tool.flit.module]
name = "ansys.rocky.core"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 90
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.rocky"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.rocky --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]
